# split-tunneld

./: README.md  pyproject.toml
extra/: org.hypperd.SplitTunnel.conf  org.hypperd.SplitTunnel.service  split-tunnel  split-tunneld.service
split-tunneld/: interface.py  main.py
split_tunneld/: __main__.py  interface.py
